--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -15,6 +15,8 @@ services:
   backend:
     image: victory82/taski_backend
     env_file: .env
+    depends_on:
+      - db
     volumes:
       - static_volume:/backend_static
   frontend:
@@ -26,6 +28,9 @@ services:
   gateway:
     image: victory82/taski_gateway  # Качаем с Docker Hub
     env_file: .env
+    depends_on:
+      - backend
+      - frontend
     volumes:
       - static_volume:/staticfiles/
     ports:
